give correct error message when running initiate on a non-replset mongod

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • Repl 11 (03/11/16)
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      If you attempt to run replSetInitiate() on a mongod that was not started with --replSet, and this isn't for a CSRS upgrade, you will get a mysterious error message:

      { "ok" : 0, "errmsg" : "Missing expected field \"version\"", "code" : 93 }
      

      This is because we skip adding the version field for non-replsets, and we try to validate the config before we detect the issue.

            Assignee:
            Benety Goh (Inactive)
            Reporter:
            Eric Milkie
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: