SERVER-22731 allow replSetInitiate on nodes started with --configsvr but not --replSet